--- a/styles.css
+++ b/styles.css
@@ -4,24 +4,40 @@
   --highlight-color: rgb(172, 204, 227);
   --highlight2-color: rgb(154, 192, 171);
   --support-color: rgb(231, 232, 227);
+  --bs-border-color: rgb(154, 192, 171);
+  --bs-form-control-bg: rgb(231, 232, 227);
 }
 @font-face {
   font-family: Elven Common Speak;
   src: url("font/Elvencommonspeak-0WXz.ttf") format("truetype");
 }
 body {
-  display: flex;
   background: url("img/313354.jpg");
   font-family: Elven Common Speak;
-  font-size: 70px;
   color: var(--support-color);
+  font-size: 40px;
 }
-
 h1 {
   font-family: Elven Common Speak;
   font-size: 50px;
-  font-weight: 400;
+}
+label {
+  display: contents;
+}
+input[type="text"] {
+  font-size: 48px;
+}
+textarea,
+.form-control {
+  font-size: 30px;
+}
+.form-control {
+  line-height: 1;
+  border-width: 3px;
 }
 #rabbit-emoji {
-  max-width: 75px;
+  max-width: 50px;
+}
+.button {
+  border-radius: 0.375rem;
 }
